Fix: highlighting on mobile

--- a/src/components/ActionControls/ActionControls.scss
+++ b/src/components/ActionControls/ActionControls.scss
@@ -41,6 +41,7 @@
         .ba-annotation-label ~ .ba-action-controls .ba-action-controls-draw,
         .ba-annotation-label ~ .ba-action-controls .ba-action-controls-highlight {
             border-left: 0;
+            margin: 0;
         }
     }
 
